---------------------------------------------------------------------------------------------------
Version: 0.1.7
Date: ?
  Info:
    - Now only assumes that 'nauvis' and 'character' are unlocked, correctly deals with mining-category.
---------------------------------------------------------------------------------------------------
Version: 0.1.6
Date: 2025-04-18
  Info:
    - Now deals with entity.dying_explosion.
    - Now deals with entity.folded_state_corpse.
    - Now deals with capsule thrown entities.
    - Now deals with spawned enemies.
    - Now deals with turret shooting effects.
    - Now deals with nested trigger effects.
---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 2025-04-16
  Info:
    - Now deals with electric generation and consumption, as well as heat generation.
    - Now deals with autoplace of entities based on autoplace controls.
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 2025-04-15
  Info:
    - Added the dependency_graph_lib_register_custom_callback global callback so mods can add their own custom requirements.
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 2025-04-14
  Info:
    - Now correctly deals with entities with non-electric energy_sources and burner properties.
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 2025-04-13
  Info:
    - Now correctly deals with entities with in or output fluid boxes with filters.
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 2025-04-13
  Info:
    - No longer uses data.raw directly, but instead takes data_raw as a parameter.
---------------------------------------------------------------------------------------------------