@@ -2,7 +2,9 @@
 Version: 0.1.7
 Date: ?
   Info:
-    - Now only assumes that 'nauvis' and 'character' are unlocked, correctly deals with mining-category.
+    - Now correctly deals with mining-category.
+    - Added method to flag which items, entities and planets start unlocked.
+    - Fixed entity required fluid code
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.6
 Date: 2025-04-18
